added flickr component

--- a/components/com/example/main.html
+++ b/components/com/example/main.html
@@ -1,7 +1,13 @@
-
 <div>
-  <div class="contentDiv">
-    <p>testing 123</p>
-    <a href="#bar/baz/">#bar/baz/</a>
+  <div class="main_content">
+    <h1 class="title"></h1>
+    <div class="pix"></div>
+    <div class="search">
+      <form method="get" class="search_form">
+        <span>I want to see some&nbsp;</span>
+        <input type="text" name="what"/>
+        <input type="submit" value="go"/>
+      </form>
+    </div>
   </div>
 </div>
