update to flickr jsonp example

--- a/components/com/example/main.html
+++ b/components/com/example/main.html
@@ -3,9 +3,14 @@
     <h1 class="title"></h1>
     <div class="pix"></div>
     <div class="search">
-      <form method="get" class="search_form">
+      <form>
         <span>I want to see some&nbsp;</span>
-        <input type="text" name="what"/>
+        <select name="what">
+          <option value="dogs">dogs</option>
+          <option value="cats">cats</option>
+          <option value="mammals">mammals</option>
+          <option value="freaks">freaks</option>
+        </select>
         <input type="submit" value="go"/>
       </form>
     </div>
