--- a/components/com/example/main.html
+++ b/components/com/example/main.html
@@ -5,12 +5,7 @@
     <div class="search">
       <form>
         <span>I want to see some&nbsp;</span>
-        <select name="what">
-          <option value="dogs">dogs</option>
-          <option value="cats">cats</option>
-          <option value="mammals">mammals</option>
-          <option value="freaks">freaks</option>
-        </select>
+        <input type="text" name="what"/>
         <input type="submit" value="go"/>
       </form>
     </div>
