--- a/components/com/example/flickr.html
+++ b/components/com/example/flickr.html
@@ -1,3 +1,4 @@
 <span>
-  <span class="photos_go_here"></span>
+  <span class="notfound">Sorry, no images found.</span>
+  <img class="pic"/>
 </span>
