--- a/components/com/example/main.css
+++ b/components/com/example/main.css
@@ -1,9 +1,12 @@
-
 div.main_content {
   width: 960px;
   margin: 0 auto;
   text-align: center;
   font-family: sans-serif;
+}
+
+div.pix {
+  margin: 10px;
 }
 
 div.search {
