updated wrt golf api

--- a/components/com/example/flickr.html
+++ b/components/com/example/flickr.html
@@ -1,4 +1,11 @@
-<span>
-  <span class="notfound">Sorry, no images found.</span>
-  <img class="pic"/>
-</span>
+<div>
+  <table cellspacing="0" cellpadding="0" class="image">
+    <caption align="bottom"></caption>
+    <tr>
+      <td>
+        <p class="notfound">No images found.</p>
+        <img class="pic"/>
+      </td>
+    </tr>
+  </table>
+</div>
