--- a/components/com/example/main.html
+++ b/components/com/example/main.html
@@ -1,12 +1,10 @@
 <div>
   <div class="main_content">
-    <h1 class="title"></h1>
     <div class="pix"></div>
     <div class="search">
       <form>
-        <span>I want to see some&nbsp;</span>
-        <input type="text" name="what"/>
-        <input type="submit" value="go"/>
+        <span>Show me&nbsp;</span>
+        <input class="text" type="text" name="what"/>
       </form>
     </div>
   </div>
